assets/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}


#menu {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    background-color: #aaaaaa;
}
#ele1 {
    margin: 1rem 0 1rem 0;
}

#ele1:hover {
  cursor: pointer;
}

header {
    background-color: #aaaaaa;
    color: #fff;
    padding: 1rem;
    text-align: center;
}

h4 {
    margin: 1.2rem 0 1.2rem 0;
}

#body-pintar {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background-color: #aaaaaa;

}

#spangreen {
    color:green;
}

#spanyellow {
    color:yellow;
}

#div1:hover,
#div2:hover,
#div3:hover,
#div4:hover {
  cursor: pointer;
}

#contenedorCajas {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  gap: 1rem;
  margin-bottom: 1rem;
}

header, h2, h3{
    text-align: center;
}

h2 {
    margin-top: 1rem;
}

#contenedorCajaVacia {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    margin: 1rem;
}

